--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "typescript": "^3.7.4"
   },
   "dependencies": {
-    "discord.js": "^11.5.1"
+    "discord.js": "^11.5.1",
+    "monk": "^7.3.4",
+    "nodemon": "^2.0.15"
   }
 }
