--- a/package.json
+++ b/package.json
@@ -32,7 +32,11 @@
   },
   "dependencies": {
     "discord.js": "^11.5.1",
+    "hex-to-uuid": "^1.1.1",
+    "jsftp": "^2.1.3",
     "monk": "^7.3.4",
-    "nodemon": "^2.0.15"
+    "node-fetch": "^3.1.0",
+    "nodemon": "^2.0.15",
+    "rcon-client": "^4.2.3"
   }
 }
